--- a/wp-content/themes/123_parent/__pre/_sass/site/_elems.scss
+++ b/wp-content/themes/123_parent/__pre/_sass/site/_elems.scss
@@ -7,7 +7,7 @@
 
 
 ul.site__iconlinks {
-    $g : getVar($sizing, gutter, px, small);;
+    $g : getVar($sizing, gutter, px, small);
     display: flex;
     flex-flow: row wrap;
     > li {
