--- a/wp-content/themes/123_parent/__build/_css/_conditional/admin.css
+++ b/wp-content/themes/123_parent/__build/_css/_conditional/admin.css
@@ -1,20 +1,43 @@
 @import '../../../node_modules/paymentfont/css/paymentfont.min.css';
-@media only screen {
-  .acf-field[data-name=placement] div.acf-button-group {
-    display: flex;
-    flex-flow: row wrap;
-    width: 150px;
-    height: 150px;
-  }
-  .acf-field[data-name=placement] div.acf-button-group label {
-    flex: 1 0 25%;
-    padding: 0;
-    color: white;
-    font-size: 0;
-  }
-  .acf-field[data-name=placement] div.acf-button-group label.selected {
-    color: #309cf3;
-  }
+.acf-field[data-name=placement] div.acf-button-group {
+  display: flex;
+  flex-flow: row wrap;
+  width: 150px;
+  height: 150px;
+}
+.acf-field[data-name=placement] div.acf-button-group label {
+  flex: 1 0 25%;
+  padding: 0;
+  color: white;
+  font-size: 0;
+}
+.acf-field[data-name=placement] div.acf-button-group label.selected {
+  color: #309cf3;
+}
+
+div#input_site_section_styles-hero-alignment.buttonset {
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: row wrap;
+}
+div#input_site_section_styles-hero-alignment.buttonset *,
+div#input_site_section_styles-hero-alignment.buttonset *:before,
+div#input_site_section_styles-hero-alignment.buttonset *:after {
+  box-sizing: inherit;
+}
+div#input_site_section_styles-hero-alignment.buttonset > label {
+  flex: 1 1 30%;
+  width: 33.3333333333%;
+  border: 1px solid rgba(0, 0, 0, 0.33);
+  position: relative;
+}
+div#input_site_section_styles-hero-alignment.buttonset > label:hover, div#input_site_section_styles-hero-alignment.buttonset > label:focus, div#input_site_section_styles-hero-alignment.buttonset > label:active {
+  background-color: rgba(0, 160, 210, 0.33);
+}
+div#input_site_section_styles-hero-alignment.buttonset > label:before {
+  content: "";
+  display: block;
+  padding-top: 100%;
 }
 
 /*# sourceMappingURL=admin.css.map */
