--- a/wp-content/themes/123_parent/__pre/_sass/parts/_hero.scss
+++ b/wp-content/themes/123_parent/__pre/_sass/parts/_hero.scss
@@ -1,207 +1,215 @@
 // 
 // 
 // 
-@media only screen {
-    //
-    //
-    //
-    section.hero {
-        overflow: hidden;
+//      The Hero Space
+//
+//
+
+section.hero {
+    position: relative;
+    overflow: hidden;
+    // width: 100%;
+    // display: block;
+    
+    
+    // this should have the min-height i think
+    // this container has the classes on it in the hero alignment to handle flexbox
+    .hero_foreground {
         position: relative;
-        width: 100%;
-        // 
-        .hero_foreground {
-            position: relative;
-            text-align: center;
-            background-color: transparent;
-            position: relative;
-            height: 100%;
-            display: flex;
-            margin: 0 auto;
-            flex-flow: column nowrap;
-            padding: getVar($sizing, gutter, px, large) getVar($sizing, gutter, px, normal);
-            //
-            @include heroAlignment();
-            //
-            &.narrow {
-                $w: getVar($sizing, content, small);
-                width: $w;
-            }
-            &.normal {
-                $w: getVar($sizing, content, medium);
-                width: $w;
-            }
-            &.wide {
-                $w: getVar($sizing, content, large);
-                width: $w;
-            }
-            &.full {
-                $w: getVar($sizing, content, full);
-                width: $w;
-            }
+        text-align: center;
+        background-color: transparent;
+        position: relative;
+        
+        
+        // height: 100%;
 
-            img {
-                display: inline-block;
-                margin: 0;
-                max-height: 60%;
-                @include clearfix;
-            }
+        min-height: 30vh;
 
-            //Subtitle
-            p {
-                color: getVar($colors, white, full);
-                @include fontS-20;
-                margin: 10px 0;
-            }
+        
+        display: flex;
+        margin: 0 auto;
+        flex-flow: column nowrap;
+        // padding: getVar($sizing, gutter, px, large) getVar($sizing, gutter, px, normal);
+        //
+        @include heroAlignment();
+        height: 100%;
+        //
+        &.narrow {
+            $w: getVar($sizing, content, small);
+            width: $w;
+        }
+        &.normal {
+            $w: getVar($sizing, content, medium);
+            width: $w;
+        }
+        &.wide {
+            $w: getVar($sizing, content, large);
+            width: $w;
+        }
+        &.full {
+            $w: getVar($sizing, content, full);
+            width: $w;
+        }
 
-            //Button
-            a.site__button {
-                padding: 10px;
-                @include fontS-20;
-                padding: 13px 30px 15px;
-                border-radius: 30px;
-                text-transform: uppercase;
-                letter-spacing: 1px;
-                line-height: 1em;
-                color: getVar($colors, white, full);
-                border: none;
-                display: inline-block;
-                background-color: getVar($colors, accent);
-                transition: background-color 0.25s;
+        img {
+            display: inline-block;
+            margin: 0;
+            max-height: 60%;
+            @include clearfix;
+        }
 
-                //Button actions on hover, focus and active
-                &:hover,
-                &:focus,
-                &:active {
-                    opacity: 0.8;
-                }
+        //Subtitle
+        p {
+            color: getVar($colors, white, full);
+            @include fontS-20;
+            margin: 10px 0;
+        }
+
+        //Button
+        a.site__button {
+            padding: 10px;
+            @include fontS-20;
+            padding: 13px 30px 15px;
+            border-radius: 30px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            line-height: 1em;
+            color: getVar($colors, white, full);
+            border: none;
+            display: inline-block;
+            background-color: getVar($colors, accent);
+            transition: background-color 0.25s;
+
+            //Button actions on hover, focus and active
+            &:hover,
+            &:focus,
+            &:active {
+                opacity: 0.8;
             }
         }
-        // 
-        // 
-        // 
-        .hero_bgtint {
+    }
+    // 
+    // 
+    // 
+    .hero_bgtint {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
+    // less height for color section by default (customizable)
+    // there is no custom field for the height of the hero type of color
+    &#hero_color {
+        height: auto;
+    }
+    &#hero_image {
+
+        > .image {
+            width: 100%;
+            height: 100%;
+            @include bgimage;
+        }
+    }
+    &#hero_slider {
+        > div#slick_slider_hero {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
-            z-index: -1;
-        }
-        // less height for color section by default (customizable)
-        // there is no custom field for the height of the hero type of color
-        &#hero_color {
-            height: auto;
-            min-height: 20vh;
-        }
-        &#hero_image {
+            margin: 0 0 0 0;
 
-            > .image {
-                width: 100%;
+            &.slick-slider,
+            .slick-list,
+            .slider_img,
+            .slick-track {
                 height: 100%;
+            }
+            // wait until initialize?
+            &.slick-initialized {
+                // opacity maybe?
+            }
+            img {
                 @include bgimage;
             }
-        }
-        &#hero_slider {
-            > div#slick_slider_hero {
+
+            margin-bottom: 0;
+
+            .slick-arrow {
                 position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                margin: 0 0 0 0;
+                top: 50%;
+                font-size: 50px;
+                padding: 10px;
 
-                &.slick-slider,
-                .slick-list,
-                .slider_img,
-                .slick-track {
-                    height: 100%;
-                }
-                // wait until initialize?
-                &.slick-initialized {
-                    // opacity maybe?
-                }
-                img {
-                    @include bgimage;
+                >i {
+                    color: white;
                 }
 
-                margin-bottom: 0;
-
-                .slick-arrow {
-                    position: absolute;
-                    top: 50%;
-                    font-size: 50px;
-                    padding: 10px;
-
-                    >i {
-                        color: white;
-                    }
-
-                    &.slick_next_arrow {
-                        right: 0;
-                    }
-
-                    &:hover,
-                    &:active,
-                    &:focus {
-                        cursor: pointer;
-                    }
+                &.slick_next_arrow {
+                    right: 0;
                 }
-            }
-            // Slider images
-            .slider_img {
-                object-fit: cover;
-                position: relative;
-                top: 0;
-                left: 50%;
-                transform: translateX(-50%);
-                width: 100%;
-            }
-        }
-    }
- 
-    // Hero Video
-    section.hero#hero_video { 
-        width: 100%;
-        // Video 
-        video {
-            @include centerer;
-            width: auto;
-            height: auto;
-            min-height: 100%;
-            min-width: 100%;
-            max-width: 100vw;
-        }
-    }
 
-    body {
-        &.header__three {
-            .hero_foreground {
-                padding-top: 140px;
-            }
-            &.banner_popup {
-                .hero_foreground {
-                    padding-top: 180px;
+                &:hover,
+                &:active,
+                &:focus {
+                    cursor: pointer;
                 }
             }
         }
-        &.header__four {
-            .hero_foreground {
-                padding-top: 60px;
-            }
-        }
-        &.header__eight {
-            .hero_foreground {
-                padding-top: 125px;
-            }
-        }
-        &.header__nine {
-            .hero_foreground {
-                padding-top: 120px;
-            }
+        // Slider images
+        .slider_img {
+            object-fit: cover;
+            position: relative;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
         }
     }
 }
 
+// Hero Video
+section.hero#hero_video { 
+    width: 100%;
+    // Video 
+    video {
+        @include centerer;
+        width: auto;
+        height: auto;
+        min-height: 100%;
+        min-width: 100%;
+        max-width: 100vw;
+    }
+}
+
+body {
+    &.header__three {
+        .hero_foreground {
+            padding-top: 140px;
+        }
+        &.banner_popup {
+            .hero_foreground {
+                padding-top: 180px;
+            }
+        }
+    }
+    &.header__four {
+        .hero_foreground {
+            padding-top: 60px;
+        }
+    }
+    &.header__eight {
+        .hero_foreground {
+            padding-top: 125px;
+        }
+    }
+    &.header__nine {
+        .hero_foreground {
+            padding-top: 120px;
+        }
+    }
+}
 @media only screen and (max-width: 960px){
     main {
         margin-top: 0;
