--- a/wp-content/themes/123_parent/__pre/_sass/site/_base.scss
+++ b/wp-content/themes/123_parent/__pre/_sass/site/_base.scss
@@ -41,9 +41,7 @@ body {
     .header>.container {
         margin: 0 auto;
     }
-
-    &.sitewidth__narrow {
-
+    &.narrow {
         >main,
         .footer>.container,
         .banner>.container,
@@ -51,9 +49,7 @@ body {
             max-width: 960px;
         }
     }
-
-    &.sitewidth__medium {
-
+    &.normal {
         >main,
         .footer>.container,
         .banner>.container,
@@ -61,9 +57,7 @@ body {
             max-width: 1280px;
         }
     }
-
-    &.sitewidth__wide {
-
+    &.wide {
         >main,
         .footer>.container,
         .banner>.container,
